k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflixclone
  labels:
    app.kubernetes.io/name: netflixclone
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: netflixclone
  ports:
    - name: http
      port: 80
      targetPort: 8000
