k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netflixclone-default
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: netflixclone
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 8000
  egress:
    - to:
        - namespaceSelector: {}
